right pics aligned still issues with text

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,3 +1,4 @@
+
 header {
   background-color: red;
   height: 54px
@@ -5,14 +6,22 @@ header {
 
 header h1 {
   float: left;
-  color: white
+  color: white;
+  font-size: 24px;
+  margin-left: 10px;
+  margin-top: 10px;
+  font: helvetica
+
 }
 
 header button {
   color: white;
   background-color: red;
   float: right;
-  border: none
+  border: none;
+  margin: 10px;
+  font-size: 16px;
+  font: helvetica
 }
 
 nav {
@@ -26,45 +35,37 @@ nav button {
   float: right;
   color: white;
   padding: 10px;
-  border: none
+  font-size: 16px;
+  margin: auto;
+  border: none;
+  font: helvetica
 }
 
 .main img {
+  padding: 30px;
   width: 1000px;
 }
 
 .main h1 {
-  color: black
+  color: black;
+  font-size: 18px;
+  margin: 8px;
+  font: helvetica
+
 }
 
 .words {
-  float: left
+  float: left;
+  margin-left: 5px;
+  font: helvetica
 }
 
 .landmarks {
-  float: right
+  position: absolute;
+  right: 25px;
+  top: 75px
 }
 
-.landmarks h1 {
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-
-.landmarks-pics img {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  display: block;
-  width: 200px;
-  float: right
-}
-
-.footer {
-  height: 45px;
-  background: grey;
-  align: bottom
-}
-
-.footer h1 {
-  float: right;
-  color: white
+.landmarks img {
+  width: 275px;
 }
